add GM IDs to ExportableField